test_src/compiler_errors/types/demotion/DemoteLongToInt.b
class DemoteLongToInt {
    void test(Int value) {
        value = 100L;
        println(value);
    }
}
